Fixed a stray ? in the html markup of entity-table-add-actions file. Also made unfocused underline elements of form fields semi opaque to make forms more readable
(cherry picked from commit 37209f78be050f1b5a102e38176a5f315f3651f5)

--- a/src/assets/styles/themes/ix-blue.scss
+++ b/src/assets/styles/themes/ix-blue.scss
@@ -152,7 +152,6 @@ $primary-dark: darken( map-get($md-primary, 500), 8% );
   @include angular-material-theme($freenas-theme);
 
 
-
   .mat-bg-primary,
   .topbar,
   .sidebar-panel.mat-sidenav .sidebar-list-item.open md-icon:not(.menu-caret),
@@ -449,6 +448,12 @@ $primary-dark: darken( map-get($md-primary, 500), 8% );
 
   .mat-form-field-underline{
     @include variable(background-color, --fg2, $fg2);
+    opacity:0.35;
+  }
+
+  .mat-warn .mat-form-field-underline,
+  .mat-focused .mat-form-field-underline{
+    opacity:0.85;
   }
 
 #test-alert {
